// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PermissionPrompt > snapshots > renders Bash permission correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Bash: {"command":"npm test"}                                                                 │
│                                                                                                  │
│ ▸ [y]es - Allow once                                                                             │
│   [n]o - Deny                                                                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders Write permission correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Write: {"file_path":"/test.ts"}                                                              │
│                                                                                                  │
│ ▸ [y]es - Allow once                                                                             │
│   [n]o - Deny                                                                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders permission with queue count correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Edit: {"file_path":"/test/file.ts","content":"test conte                                     │
│                                                                                                  │
│ ▸ [y]es - Allow once                                                                             │
│   [n]o - Deny                                                                                    │
│                                                                                                  │
│ (+5 more pending)                                                                                │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders permission with suggestions correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Write: {"file_path":"/test/file.ts","content":"test conte                                    │
│                                                                                                  │
│ ▸ [y]es - Allow once                                                                             │
│   [n]o - Deny                                                                                    │
│   [l]ocal - Save locally .claude/settings.local.json                                             │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders userSettings suggestion correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Write: {"file_path":"/test/file.ts","content":"test conte                                    │
│                                                                                                  │
│ ▸ [y]es - Allow once                                                                             │
│   [n]o - Deny                                                                                    │
│   [u]ser - Save globally ~/.claude/settings.json                                                 │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
